tests/baselines/reference/emitArrowFunction(strict=true).errors.txt
emitArrowFunction.ts(3,33): error TS7019: Rest parameter 'rest' implicitly has an 'any[]' type.


==== emitArrowFunction.ts (1 errors) ====
    var f1 = () => { }
    var f2 = (x: string, y: string) => { }
    var f3 = (x: string, y: number, ...rest) => { }
                                    ~~~~~~~
!!! error TS7019: Rest parameter 'rest' implicitly has an 'any[]' type.
    var f4 = (x: string, y: number, z = 10) => { }
    function foo(func: () => boolean) { }
    foo(() => true);
    foo(() => { return false; });